--- a/clicker.html
+++ b/clicker.html
@@ -24,6 +24,9 @@
     <div id="buyRandom">
             <button id="random">Buy <b>1 - 100 points</b> (for 50 points)</button>
     </div>    
+    <div id="buyFiveRandom">
+            <button id="fiveRandom">Buy <b>5 1 - 100 point draws</b> (for 200 points)</button>
+    </div>
     <div id="buySuper">
         <button id="super">Buy a <b>SUPER CLICKER</b> (for  points)</button>
     </div>
