--- a/clicker.html
+++ b/clicker.html
@@ -14,21 +14,22 @@
         <div>PRIME COUNT: <span id="primeOutput">0</span></div>
         <li>Every twentieth prime doubles your score</li>
         <li>Buy a random number of points between 1 and 100 for 50 points</li>
-        <!-- <div>SCORE OUTPUT: <span id="output">0</span></div>
-        <div>SCORE OUTPUT: <span id="output">0</span></div> -->
     </div>
-    <div id="mainButton">
+    <div id="mainButtons">
         <button id="clicker"><b>CLICKER</b></button>
-        <!-- text will update with clicker purchases -->
+        <button id="superClicker" style="display: none"><b>SUPER CLICKER</b></button>
+        <button id="ultraClicker" style="display: none"><b>ULTRA CLICKER</b></button>
     </div>
+    <!-- Consider changing the price and reward with better clickers -->
     <div id="buyRandom">
             <button id="random">Buy <b>1 - 100 points</b> (for 50 points)</button>
     </div>    
     <div id="buyFiveRandom">
             <button id="fiveRandom">Buy <b>5 1 - 100 point draws</b> (for 200 points)</button>
     </div>
-    <div id="buySuper">
+    <div id="buyBetter">
         <button id="super">Buy a <b>SUPER CLICKER</b> (for  points)</button>
+        <button id="ultra" style="display: none">Buy an <b>ULTRA CLICKER</b> (for  points)</button>
     </div>
 
     <script src="./clicker.js"></script>
