--- a/clicker.html
+++ b/clicker.html
@@ -21,22 +21,21 @@
         <button id="megaClicker" style="display: none"><b>MEGA CLICKER</b></button>
         <button id="ultraClicker" style="display: none"><b>ULTRA CLICKER</b></button>
     </div>
-    <!-- Consider changing the prices/rewards with better clickers -->
     <div id="buyRandom">
-            <button id="random">Buy <b>1 - 100 points</b> (for 50 points)</button>
+            <button id="random"><b>RANDOM CLICKER</b> (50 points)</button>
     </div>    
     <div id="buyFiveRandom">
-            <button id="fiveRandom">Buy <b>5 1 - 100 point draws</b> (for 200 points)</button>
+            <button id="fiveRandom"><b>RANDOM CLICKER</b> X <b>5</b> (250 points)</button>
     </div>
-    <div id="buyAutoClickers">
-            <button id="autoClickerOne" style="display: none">Buy an <b>AUTO CLICKER</b> (for 7,500 points)</button>
-            <button id="autoClickerTwo" style="display: none">Buy an <b>AUTO CLICKER</b> (for 7,500 points)</button>
-            <button id="autoClickerThree" style="display: none">Buy an <b>AUTO CLICKER</b> (for 7,500 points)</button>
-        </div>
     <div id="buyBetter">
         <button id="super">Buy a <b>SUPER CLICKER</b> (for 5,000 points)</button>
         <button id="mega" style="display: none">Buy a <b>MEGA CLICKER</b> (for 25,000 points)</button>
         <button id="ultra" style="display: none">Buy an <b>ULTRA CLICKER</b> (for 100,000 points)</button>
+    </div>
+    <div id="buyAutos">
+        <button id="autoOne" style="display: none">Buy an <b>AUTO CLICKER</b> (for 10,000 points)</button>
+        <button id="autoTwo" style="display: none">Buy a <b>DOUBLE AUTO CLICKER</b> (for 20,000 points)</button>
+        <button id="autoThree" style="display: none">Buy a <b>MEGA AUTO CLICKER</b> (for 50,000 points)</button>
     </div>
 
     <script src="./clicker.js"></script>
